2008-08-02  Junichi Uekawa  <dancer@debian.org>

	* dsh.c: 2008
	(do_echoing_back_process): block some signals in the pipe-reader
	for a change.

	* tests/sleepyshell.c: A C implementation that sleeps less than 1
	second.

	* tests/sleepyshell.sh: a fake remote shell command that does
	sleep and echo. Use it for debugging.

	* tests/pipe-vs-redirect.sh: check that redirect and pipe output
	will work.

2008-02-02  Junichi Uekawa  <dancer@debian.org>

	* test entry.
	more test entry.
	even more test entry

2007-12-14  Junichi Uekawa  <dancer@debian.org>

	* dsh.c (do_echoing_back_process): set line-buffering.

2007-08-15  Junichi Uekawa  <dancer@debian.org>

	* dsh.1.ja.po: new file

	* Makefile.am (dsh.1.ja.po): makefile.

	* parameter.c: hide-machine-names

	* dsh.ja.1: document

	* dsh.1: document.

	* dsh.spec: add contributed spec file.

2007-05-18  Junichi Uekawa  <dancer@debian.org>

	* Makefile.am (upload-dist-all): change from viper to aegis.

	* parameter.c: fix forklimit parameter option thinko.

2006-08-11  Junichi Uekawa  <dancer@debian.org>

	* configure.ac: 0.25.7

2005-07-10  Junichi Uekawa  <dancer@debian.org>

	* dsh.1: updated manual page to use \- rather than - in places.

2005-04-08  Junichi Uekawa  <dancer@debian.org>

	* configure.ac: 0.25.6

	* dsh.c: move around signal.h inclusion
	  to really fix solaris build failure.
	HAVE_SIGNAL_H should be used after config.h is read.

2005-03-16  Junichi Uekawa  <dancer@debian.org>

	* tests/param-f-with-space.sh (d): updated test

	* tests/param-f.sh: updated test

	* tests/param-cn4.sh: updated test

	* tests/param-m.sh): updated test

	* parameter.c (parse_options): reverse the list to make proper 
	order for machinelist

	* debian/copyright (Copyright): update

	* NEWS: update

	* configure.ac: 0.25.4.cvs.2

	* Makefile.am: add new test

	* tests/machinelist-order.sh: new test

2005-03-12  Junichi Uekawa  <dancer@debian.org>

	* TODO: solaris compilation error is fixed, close.
