@@ -1,3 +1,7 @@
+2008-08-03  Junichi Uekawa  <dancer@debian.org>
+
+	* parameter.c (open_devnull): add error checking.
+
 2008-08-02  Junichi Uekawa  <dancer@debian.org>
 
 	* dsh.c: 2008
